# linodenet

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  TODO.md  TODO.rst  backup_setup.py  conftest.py  diagrams  mypy.ini  pyproject.toml  pyproject.toml.sb  pytype.cfg  report.txt  requirements-dev.txt  requirements-extra.txt  requirements-test.txt  requirements-tsdm.txt  requirements.txt  setup.py  tach.toml  tox.ini
bugs/: collect_env.py  pycharm.py  tmp.py
bugs/torch/: collect_env.py  jit_inplace.py  jit_matrix_norm.py  non_hashable.py  trace_inaccurate.py
dev/: Cache Parametrization.ipynb  Remark_ModuleList_vs_Sequential.md  SVD_backward.ipynb  SpectralNorm.ipynb  Untitled.ipynb  class_decorator.ipynb  class_decorator_2.ipynb  constants.ipynb  lssm.md  minimal_example.py  model_loading.ipynb  namespace_cleaning.ipynb  register_buffer.ipynb  signature.ipynb  spectral_norm_reimplementation.ipynb  tmp.ipynb  torchscript.ipynb  untitled.ipynb
dev/benchmark/: Analysis_LinODE.ipynb  matrix_exponential_batch.ipynb  speed_test.ipynb  test_forward_stability.ipynb
dev/bugs/: torch_script_unicode.ipynb  torchscript_magic_method.ipynb
dev/custom_operator/: op.cpp  test_custom_classes.py  test_custom_ops.py
dev/cutom_op/: Untitled.ipynb  custom-operator-demo.ipynb  custom-spectral-normalization.ipynb  custom_class.cpp  custom_module.cpp  demo.ipynb  my_module.cpp  op.cpp  regex-math-sphinx-dollar.ipynb  spectral_norm.cpp  spectral_norm.ipynb
dev/experiments/: .ipynb  PackedSequence.ipynb  batch-speed-test.ipynb  batch_test.ipynb  custom-data-loader.ipynb  dataloader_list_test.ipynb  gcd_interval_arithmetic.ipynb  pytorch-forecasting-example.ipynb  regular_irregular.ipynb  singular_vectors.ipynb
dev/expressiveness/: models_for_one_eq_different_initial_cond.torch  ode_ground_truth.py  ode_ground_truth_gpu.py
dev/filter/: KalmanCell.ipynb  SequentialFilter.ipynb  (+2 more)
diagram/: latent.drawio  lssm-new-notation.drawio
docs/: API.rst  Makefile  conf.py  index.rst  linodenet.init.rst  linodenet.models.rst  linodenet.rst  spectral_normalization.tex
experiments/: .ipynb  ForecastPlots.ipynb  LinODE-RNN.ipynb  Untitled.ipynb  batch-speed-test.ipynb  batch_test.ipynb  custom-data-loader.ipynb  iResNetLayer_implementations.py  pytorch-forecasting-example.ipynb  regular_irregular.ipynb  riemann_optimization.ipynb  singular_vectors.py  spectral_normalization_algorithm.py  spectral_normalization_algorithm_momentum.py  spectral_normalization_algorithm_newton.py
linodenet/: __init__.py  requirements.txt
models/: LinODE.pt  LinODECell.pt  LinODEnet.pt  LinearContraction.pt  RecursiveScriptModule.pt  iResNet.pt  iResNetBlock.pt
notebooks/: 2_LinearODERNN.ipynb  Analysis_LinODE.ipynb  Check forward pass.ipynb  LinODE-RNN.ipynb  LinearODE-torchscript-Copy1.ipynb  LinearODE-torchscript-Copy2.ipynb  LinearODE-torchscript.ipynb  LinearODE.ipynb  LinearODERNN.ipynb  Untitled2.ipynb  bug.py  iResNet.ipynb  ode_rnn.ipynb  speed_test.ipynb
paper/: limitations.md
reports/: mypy_report.xml  pytest.xml  pytest_report.xml
run/: conftest.py  generate_requirements.sh  get_dependencies.py  setup_remote.sh  update_project_deps.sh  update_pyproject.py
src/linodenet/lib/: CMakeLists.txt  README.md  __init__.py  _liblinodenet.py  _utils.py  benchmark.sh  build.sh  check_grad.py  check_spec.py  compare.sh  custom_operators.py  grad_check.py  matrix_exponential.cpp  requirements.txt  singular_triplet.cpp  singular_triplet_debug.cpp  spectral_norm.cpp  spectral_norm_extension.cpp
src/linodenet/lib/src/liblinodenet/: matrix_exponential.cpp  matrix_root.cpp  singular_triplet.cpp  singular_triplet_debug.cpp  singular_triplet_riemann.cpp  spectral_norm.cpp  spectral_norm_debug.cpp  spectral_norm_riemann.cpp  utils.cpp
src/linodenet/lib/tests/: __init__.py
src/linodenet/lib/tests/liblinodenet/: test_correctness.py  test_grad.py  test_performance.py  test_singular_triplet_simple.py
test/: __init__.py  test_LinODE.py  test_all.py  test_filters.py  test_iResNet.py  test_initializations.py  util.py
tests/: __init__.py  conftest.py  test_LinODE.py  test_LinODEnet.py  test_all.py  test_cli.py  test_filters.py  test_iResNet.py  test_initializations.py  test_models_run.py  test_stability.py  time_import.sh
theory/: idempotent_filter.tex  linear_systems_ode.tex
(+361 files in other folders)
